resources/assets/sass/components/blocks/home__inwestycjeLista.scss
/* ... */
/* Style for odd*/
.home__inwestycjeLista__item__outsite:nth-child(odd) {
    background: linear-gradient(180deg, $white 50%, $lightBlue 50%);

    .home__inwestycjeLista__item {
        .l-wrapper {
            padding-left: 0;

            @include breakpoint($md) {
                padding-left: 20px;
            }
        }
    }

    .home__inwestycjeLista__item__footer__wrapper {
        @include breakpoint($md) {
            justify-content: flex-end;
        }
    }

    .home__inwestycjeLista__item__footer__title {
        @include breakpoint($md) {
            padding-right: 50px;
            padding-left: 180px;
            transition: all 0.6s ease-out 0.6s;
        }
    }

    .home__inwestycjeLista__item__modal__link {
        @include breakpoint($md) {
            align-self: unset;
        }
    }

    &.active {
        .home__inwestycjeLista__item__footer__link {
            width: 70px;
            height: 70px;
            // margin-left: -20px;

            @include breakpoint($md) {
                width: 75px;
                height: 75px;
                margin-left: 0;
            }

            @include breakpoint($xl) {
                width: 115px;
                height: 115px;
            }
        }

        .home__inwestycjeLista__item__footer__title {
            @include breakpoint($md) {
                padding-right: 20px;
            }
        }
    }


    .footer__modal {
        transform-origin: left top;

        @include breakpoint($md) {
            position: absolute;
            right: 0;
            left: unset;
            transform-origin: right top;
        }
    }

    .home__inwestycjeLista__item__modal__wrapp {
        align-items: flex-end;

        p {
            text-align: right;
        }
    }

    @include breakpoint($md) {
        background: linear-gradient(180deg, $white 30%, $lightBlue 30%);
    }
}

/* Style for every 2nd item*/
.home__inwestycjeLista__item__outsite:nth-child(even) {
    background: linear-gradient(180deg, $lightBlue 50%, $white 50%);

    .home__inwestycjeLista__item {
        .l-wrapper {
            padding-right: 0;

            @include breakpoint($md) {
                padding-right: 20px;
            }
        }
    }

    .home__inwestycjeLista__item__footer {
        text-align: right;

        svg {
            @include breakpoint($md) {
                margin-left: initial;
            }
        }
    }

    .home__inwestycjeLista__item__copy {
        order: 2;
        text-align: right;
        padding-left: 0;
        padding-right: 4%;
    }

    .home__inwestycjeLista__item__images {
        order: 1;
    }

    .home__inwestycjeLista__item__copy .--number:before {
        right: 0;
        left: unset;

    }

    .home__inwestycjeLista__item__footer__wrapper {
        align-items: flex-end;

        @include breakpoint($md) {
            flex-direction: row-reverse;
            align-items: center;
            margin-left: auto;
            justify-content: flex-end;

            .home__inwestycjeLista__item__footer__title {
                padding-left: 50px;
                padding-right: 180px;
            }
        }
    }

    .home__inwestycjeLista__item__wrap:before {
        left: unset;
        right: 0;

        @include breakpoint($md) {
            right: 4%;
        }
    }

    .home__inwestycjeLista__item__modal {
        @include breakpoint($md) {
            left: 90px;
            right: initial;
        }
    }

    .home__inwestycjeLista__item__modal__wrapp {
        p {
            opacity: 0;
            transform: translateY(100px);
            transition: all 0.3s ease-out;

            @include breakpoint($md) {
                transition: transform 0.2s ease-out,
                            opacity 0.2s ease-out;
            }
        }
    }

    .footer__modal {
        transform-origin: right top;

        @include breakpoint($md) {
            transform-origin: left top;
        }
    }

    &.active {
        .home__inwestycjeLista__item__footer__link {
            width: 70px;
            height: 70px;
            // margin-right: -20px;

            @include breakpoint($md) {
                width: 75px;
                height: 75px;
                margin-right: 0;
            }

            @include breakpoint($xl) {
                width: 115px;
                height: 115px;
            }
        }
    
        .home__inwestycjeLista__item__footer__title {
            @include breakpoint($md) {
                padding-left: 20px;
            }
        }

    }

    @include breakpoint($md) {
        background: linear-gradient(180deg, $lightBlue 30%, $white 30%);
    }
}

.footer__modal {
    position: absolute;
    width: 100%;
    z-index: -1;

    padding-top: 100px;
    top: 0;
    left: 0;
    background: $white;
    transform: scale(0);
    transition-property: all;
    transition-duration: 0.6s;
    transition-timing-function: ease-in-out;
    transition-delay: 0.3s;
    background: $white;

    @include breakpoint($md) {
        color: white;
        background: $darkBlue;
        max-width: 50%;
    }
}
/* ... */

